--- a/task1.html
+++ b/task1.html
@@ -1,1 +1,121 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PORTFOILO</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
+        }
+        header {
+            background: #333;
+            color: #fff;
+            padding: 20px 10px;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+        }
+        nav {
+            margin-top: 10px;
+        }
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 15px;
+        }
+        section {
+            padding: 20px;
+        }
+        .about img {
+            max-width: 150px;
+            border-radius: 50%;
+            display: block;
+            margin: 0 auto;
+        }
+        .skills ul, .projects ul {
+            list-style: none;
+            padding: 0;
+        }
+        .skills li, .projects li {
+            margin: 10px 0;
+        }
+        footer {
+            background: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+        }
+        .contact-info {
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>BALU</h1>
+        <p>Web Developer | Designer | Creator</p>
+        <nav>
+            <a href="#about">About</a>
+            <a href="#skills">Skills</a>
+            <a href="#projects">Projects</a>
+            <a href="#resume">Resume</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
 
+    <section id="about" class="about">
+        <h2>About Me</h2>
+        <img src="https://media.licdn.com/dms/image/v2/D4D03AQEGBE4cjz8pcQ/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1726897181488?e=1742428800&v=beta&t=1ZLZ5PQOdLksdUFYRt98OFwt2jWEBrQ1d454bwhfkuE"  alt="BALU_img" width="7000" height="200">
+        <p>Hello! I'm Balu, a passionate web developer with experience in creating beautiful and functional websites. I specialize in HTML, CSS, and JavaScript, and I love solving problems with creative solutions.</p>
+    </section>
+
+    <section id="skills" class="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>HTML & CSS</li>
+            <li>JavaScript</li>
+            <li>React</li>
+            <li>Responsive Design</li>
+            <li>Git & GitHub</li>
+        </ul>
+    </section>
+
+    <section id="projects" class="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li>
+                <h3>Portfolio Website</h3>
+                <p>A personal portfolio showcasing my skills and projects.</p>
+                <img src="portfolio-sample.jpg" alt="Portfolio Screenshot">
+            </li>
+            <li>
+                <h3>Weather App</h3>
+                <p>An application that provides real-time weather updates.</p>
+                <img src="weather-app.jpg" alt="Weather App Screenshot">
+            </li>
+        </ul>
+    </section>
+
+    <section id="resume" class="resume">
+        <h2>Resume</h2>
+        <p>Download my resume <a href="resume.pdf" target="_blank">here</a>.</p>
+    </section>
+
+    <section id="contact" class="contact">
+        <h2>Contact</h2>
+        <div class="contact-info">
+            <p>Email: jamanabalu77@gmail.com</p>
+            <p>Phone: +9100828251</p>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Balu. All rights reserved.</p>
+    </footer>
+</body>
+</html>
